

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'maven-publish'
    //id("org.panteleyev.jpackageplugin") version "1.6.0"
    id("org.beryx.jlink") version "3.0.1"

}

group = 'klik'
version = '0.9.0'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    options.compilerArgs += ['--enable-preview']
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


def main_class_name = 'klik.Klik_application'

application {
    mainModule = 'klikmodule'
    mainClass = main_class_name
    applicationDefaultJvmArgs = ["-Xms1G"]
    //applicationDefaultJvmArgs = ["-Xms6G", "-Xmx10G", "--enable-preview"]
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}

def currentOS = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

jar {
    manifest {
        attributes(
                'Main-Class': main_class_name
        )
    }
}

dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'
    // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.1'
    // files etc
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    // PDF icons
    implementation 'org.apache.pdfbox:pdfbox:3.0.0-RC1'

}


